--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Aptitude</h5>
                         <p class="card-text">Learn Aptitude from basic to pro with Placement Yatra</p>
-                        <a href="/html/Apptitude.html" class="card-button mt-5">Prepare Now</a>
+                        <a href="html/Apptitude.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
